<resources>
    <string name="app_name">Жуки</string>
    <string name="tab_registration">Игрок</string>
    <string name="tab_rules">Правила</string>
    <string name="tab_authors">Авторы</string>
    <string name="tab_settings">Настройки</string>
    <string name="authors_title">Авторы приложения</string>
    <string name="author_photo">Фотография автора</string>
    <string name="author_polkovnikov">Полковников Даниил Романович</string>
    <string name="author_shatokhin">Шатохин Роман Алексеевич</string>
    <string name="game_settings_title">Настройки игры</string>
    <string name="game_speed">Скорость игры</string>
    <string name="max_cockroaches">Максимальное количество тараканов на экране</string>
    <string name="bonus_interval">Интервал появления бонусов</string>
    <string name="round_duration">Длительность раунда</string>
    <string name="level_value">Уровень: %1$d</string>
    <string name="count_value">%1$d</string>
    <string name="seconds_value">%1$d сек.</string>
    <string name="registration_title">Регистрация игрока</string>
    <string name="full_name">ФИО</string>
    <string name="gender">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="course">Курс</string>
    <string name="difficulty">Сложность игры</string>
    <string name="difficulty_default">Специалист</string>
    <string name="difficulty_easy">Легко</string>
    <string name="difficulty_hard">Сложно</string>
    <string name="birth_date">Дата рождения</string>
    <string name="select_birth_date">Выбрать дату</string>
    <string name="selected_birth_date">%1$d.%2$d.%3$d</string>
    <string name="zodiac_image">Изображение знака зодиака</string>
    <string name="register_player">Зарегистрировать игрока</string>
    <string name="full_name_required">Введите ФИО</string>
    <string name="player_result">%1$s\nПол: %2$s\nКурс: %3$d\nСложность: %4$s\nДата: %5$s\nЗодиак: %6$s</string>

    <string-array name="difficulty_levels">
        <item>Новичок</item>
        <item>Смешарик</item>
        <item>Специалист</item>
        <item>Мастер</item>
        <item>Легенда</item>
    </string-array>

    <string-array name="courses">
        <item>1 курс</item>
        <item>2 курс</item>
        <item>3 курс</item>
        <item>4 курс</item>
    </string-array>
</resources>
