<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/game_settings_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_speed"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
        <TextView
            android:id="@+id/gameSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        <SeekBar
            android:id="@+id/gameSpeedSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/max_cockroaches"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
        <TextView
            android:id="@+id/maxCockroachesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        <SeekBar
            android:id="@+id/maxCockroachesSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="19" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bonus_interval"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
        <TextView
            android:id="@+id/bonusIntervalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        <SeekBar
            android:id="@+id/bonusIntervalSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/round_duration"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
        <TextView
            android:id="@+id/roundDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        <SeekBar
            android:id="@+id/roundDurationSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9" />
    </LinearLayout>
</ScrollView>
